enum Status, InMemoryHistoryManager, Manager.java