@@ -2,22 +2,26 @@ package Manager;
 import Tasks.Task;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager{
 
-    public static List<Task> getHistory = new ArrayList<>();
+    private static LinkedList<Task> getHistory = new LinkedList<>();
+
+    private int MAX_SIZE_LIST = 10;
 
     @Override
-    public List<Task> getHistory () {
-        return getHistory;
+    public List<Task> getHistory() {
+        return List.copyOf(getHistory);
     }
 
     @Override
     public void addHistory(Task task){
         getHistory.add(task);
-        if (getHistory.size()>10) {
-            getHistory.remove(0);
+        if (getHistory.size()>MAX_SIZE_LIST) {
+            getHistory.removeFirst();
         }
     }
 }
